--- a/services.html
+++ b/services.html
@@ -222,7 +222,7 @@
     <div class="services-grid">
 
       <div class="service-card">
-        <img src="https://img.icons8.com/external-flat-icons-inmotus-design/67/000000/external-thesis-university-flat-icons-inmotus-design.png" alt="Thesis Icon" />
+        <img src="https://img.icons8.com/fluency/96/edit-document.png" alt="Thesis Structuring Icon" />
         <h3>Thesis Structuring</h3>
         <p>Get help organizing your chapters, formulating research questions, and aligning your methodology to academic standards.</p>
       </div>
@@ -234,7 +234,7 @@
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/external-wanicon-flat-wanicon/64/000000/external-ai-artificial-intelligence-wanicon-flat-wanicon.png" alt="AI Writing Icon" />
+        <img src="https://img.icons8.com/fluency/96/shield.png" alt="AI-Safe Academic Writing Icon" />
         <h3>AI-Safe Academic Writing</h3>
         <p>We write and coach using ethical, human-led strategies that pass AI detectors and maintain originality.</p>
       </div>
