--- a/services.html
+++ b/services.html
@@ -222,7 +222,7 @@
     <div class="services-grid">
 
       <div class="service-card">
-        <img src="https://img.icons8.com/fluency/96/notes.png" alt="Thesis Structuring Icon" />
+        <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-book-education-flaticons-lineal-color-flat-icons.png" alt="Thesis Icon" />
         <h3>Thesis Structuring</h3>
         <p>Get help organizing your chapters, formulating research questions, and aligning your methodology to academic standards.</p>
       </div>
@@ -234,7 +234,7 @@
       </div>
 
       <div class="service-card">
-        <img src="https://img.icons8.com/external-wanicon-flat-wanicon/64/000000/external-ai-artificial-intelligence-wanicon-flat-wanicon.png" alt="AI Writing Icon" />
+        <img src="https://img.icons8.com/external-flat-juicy-fish/60/000000/external-ai-technology-flat-flat-juicy-fish.png" alt="AI Writing Icon" />
         <h3>AI-Safe Academic Writing</h3>
         <p>We write and coach using ethical, human-led strategies that pass AI detectors and maintain originality.</p>
       </div>
