--- a/services.html
+++ b/services.html
@@ -201,56 +201,24 @@
       background: linear-gradient(135deg, #3b82f6, #2563eb);
     }
 
-    /* New footer styles for visibility */
-    .footer-container {
-      background-color: #e0e7ff; /* soft blue background */
-      border-top: 1px solid #6366f1; /* darker blue border */
-      padding: 1.5rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-    .contact-info, .site-info {
-      flex: 1;
-      min-width: 240px;
-      color: #1e293b; /* dark slate blue */
-      font-weight: 600;
-      font-size: 1rem;
-      line-height: 1.5;
-    }
-    .contact-info p, .site-info p {
-      margin: 0.3rem 0;
-      user-select: text;
-    }
-    .contact-info strong {
+    /* Scoped social icons footer styles - only on services page */
+    .services-page footer .site-info p a {
       color: #4f46e5;
-      font-size: 1.1rem;
-    }
-    .site-info p a {
-      color: #4f46e5;
-      text-decoration: none;
       margin-left: 0.5rem;
       vertical-align: middle;
+      font-size: 28px;
+      display: inline-block;
+      transition: color 0.3s ease;
+      user-select: none;
+      text-decoration: none;
     }
-    .site-info p a:hover {
-      text-decoration: underline;
+    .services-page footer .site-info p a:first-child {
+      margin-left: 0;
     }
-
-    /* Dark mode footer tweaks */
-    html[data-theme="dark"] .footer-container {
-      background-color: #1e293b;
-      border-top: 1px solid #3b82f6;
-    }
-    html[data-theme="dark"] .contact-info,
-    html[data-theme="dark"] .site-info {
-      color: #bfdbfe;
-    }
-    html[data-theme="dark"] .contact-info strong {
-      color: #93c5fd;
-    }
-    html[data-theme="dark"] .site-info p a {
-      color: #93c5fd;
+    .services-page footer .site-info p a:hover,
+    .services-page footer .site-info p a:focus {
+      color: #6366f1;
+      outline: none;
     }
   </style>
 </head>
@@ -315,18 +283,34 @@
   </section>
 </main>
 
-<!-- ✅ Footer (updated for visibility) -->
+<!-- ✅ Footer (same as index.html) -->
 <footer>
-  <div class="footer-container">
-    <div class="contact-info">
+  <div class="footer-container" style="display:flex; justify-content:space-between; flex-wrap:wrap; gap:1rem; padding:1.5rem 2rem; background:#fafafa; border-top:1px solid #ddd;">
+    <div class="contact-info" style="flex:1; min-width:240px;">
       <p><strong>Contact Us On:</strong></p>
-      <p><span class="material-icons" aria-hidden="true">email</span> bomfreelancelab@gmail.com</p>
-      <p><span class="material-icons" aria-hidden="true">phone</span> +1‑234‑567‑8900</p>
+      <p><span class="material-icons">email</span> bomfreelancelab@gmail.com</p>
+      <p><span class="material-icons">phone</span> +1‑234‑567‑8900</p>
     </div>
-    <div class="site-info" style="text-align:right;">
+    <div class="site-info" style="flex:1; min-width:240px; text-align:right;">
       <p>Follow me:
-        <a href="#" aria-label="LinkedIn"><span class="material-icons" aria-hidden="true">linkedin</span></a>
-        <a href="#" aria-label="Telegram"><span class="material-icons" aria-hidden="true">telegram</span></a>
+        <a href="#" aria-label="Facebook" title="Facebook" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons">facebook</span>
+        </a>
+        <a href="#" aria-label="Instagram" title="Instagram" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons">photo_camera</span>
+        </a>
+        <a href="#" aria-label="X (Twitter)" title="X (Twitter)" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons">alternate_email</span>
+        </a>
+        <a href="#" aria-label="LinkedIn" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons">linkedin</span>
+        </a>
+        <a href="#" aria-label="Telegram" title="Telegram" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons">send</span>
+        </a>
+        <a href="#" aria-label="YouTube" title="YouTube" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons">play_circle_filled</span>
+        </a>
       </p>
     </div>
   </div>
