--- a/services.html
+++ b/services.html
@@ -201,30 +201,66 @@
       background: linear-gradient(135deg, #3b82f6, #2563eb);
     }
 
-    /* Scoped social icons footer styles - only on services page */
+    /* Footer social icons container */
+    .services-page footer .site-info p {
+      margin: 0;
+      font-weight: 600;
+      font-size: 1rem;
+      color: #333;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    .services-page footer .site-info p::before {
+      content: "Follow me:";
+      margin-right: 0.5rem;
+      font-weight: 700;
+      color: #1a1a1a;
+      user-select: none;
+    }
+
+    /* Social icon links */
     .services-page footer .site-info p a {
       color: #4f46e5;
-      margin-left: 0.5rem;
-      vertical-align: middle;
       font-size: 28px;
-      display: inline-block;
-      transition: color 0.3s ease;
-      user-select: none;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border-radius: 6px;
+      transition: background-color 0.3s ease, color 0.3s ease;
       text-decoration: none;
+      user-select: none;
     }
-    .services-page footer .site-info p a:first-child {
-      margin-left: 0;
-    }
+
     .services-page footer .site-info p a:hover,
     .services-page footer .site-info p a:focus {
-      color: #6366f1;
+      background-color: #6366f1;
+      color: white;
       outline: none;
+      cursor: pointer;
+    }
+
+    /* Responsive footer tweaks */
+    @media (max-width: 480px) {
+      .services-page footer .site-info p {
+        justify-content: center;
+      }
+      .services-page footer .site-info p a {
+        font-size: 24px;
+        width: 32px;
+        height: 32px;
+      }
     }
   </style>
 </head>
 <body class="services-page">
 
-<!-- ✅ Navigation (same as index.html) -->
+<!-- Navigation -->
 <nav>
   <div class="nav-brand">Tutor Brian</div>
   <button class="menu-toggle" id="menu-toggle">☰</button>
@@ -283,33 +319,33 @@
   </section>
 </main>
 
-<!-- ✅ Footer (same as index.html) -->
+<!-- Footer -->
 <footer>
   <div class="footer-container" style="display:flex; justify-content:space-between; flex-wrap:wrap; gap:1rem; padding:1.5rem 2rem; background:#fafafa; border-top:1px solid #ddd;">
     <div class="contact-info" style="flex:1; min-width:240px;">
       <p><strong>Contact Us On:</strong></p>
-      <p><span class="material-icons">email</span> bomfreelancelab@gmail.com</p>
-      <p><span class="material-icons">phone</span> +1‑234‑567‑8900</p>
+      <p><span class="material-icons" aria-hidden="true">email</span> bomfreelancelab@gmail.com</p>
+      <p><span class="material-icons" aria-hidden="true">phone</span> +1‑234‑567‑8900</p>
     </div>
     <div class="site-info" style="flex:1; min-width:240px; text-align:right;">
-      <p>Follow me:
+      <p>
         <a href="#" aria-label="Facebook" title="Facebook" target="_blank" rel="noopener noreferrer">
-          <span class="material-icons">facebook</span>
+          <span class="material-icons" aria-hidden="true">facebook</span>
         </a>
         <a href="#" aria-label="Instagram" title="Instagram" target="_blank" rel="noopener noreferrer">
-          <span class="material-icons">photo_camera</span>
+          <span class="material-icons" aria-hidden="true">photo_camera</span>
         </a>
         <a href="#" aria-label="X (Twitter)" title="X (Twitter)" target="_blank" rel="noopener noreferrer">
-          <span class="material-icons">alternate_email</span>
+          <span class="material-icons" aria-hidden="true">alternate_email</span>
         </a>
         <a href="#" aria-label="LinkedIn" title="LinkedIn" target="_blank" rel="noopener noreferrer">
-          <span class="material-icons">linkedin</span>
+          <span class="material-icons" aria-hidden="true">linkedin</span>
         </a>
         <a href="#" aria-label="Telegram" title="Telegram" target="_blank" rel="noopener noreferrer">
-          <span class="material-icons">send</span>
+          <span class="material-icons" aria-hidden="true">send</span>
         </a>
         <a href="#" aria-label="YouTube" title="YouTube" target="_blank" rel="noopener noreferrer">
-          <span class="material-icons">play_circle_filled</span>
+          <span class="material-icons" aria-hidden="true">play_circle_filled</span>
         </a>
       </p>
     </div>
