--- a/Contact.html
+++ b/Contact.html
@@ -1,31 +1,240 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact - Academic Tutor</title>
+  <title>Contact – Tutor Brian</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <style>
+    body.contact-page {
+      font-family: 'Poppins', sans-serif;
+      background: #f9fafb;
+      color: #1a1a1a;
+      padding: 4rem 1.5rem;
+    }
+
+    .contact-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2.5rem;
+      max-width: 1100px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
+      overflow: hidden;
+    }
+
+    .contact-form-section {
+      flex: 1.1;
+      padding: 2.5rem;
+      background: #f3f4ff;
+    }
+
+    .contact-info-section {
+      flex: 1;
+      padding: 2.5rem;
+      background: #ffffff;
+      border-left: 2px solid #e5e7eb;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .contact-form-section h2,
+    .contact-info-section h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+      color: #4f46e5;
+    }
+
+    form label {
+      display: block;
+      margin-bottom: 0.3rem;
+      font-weight: 600;
+      color: #333;
+    }
+
+    form input,
+    form textarea {
+      width: 100%;
+      padding: 0.9rem 1rem;
+      margin-bottom: 1.5rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      font-family: 'Poppins', sans-serif;
+      transition: border-color 0.3s ease;
+    }
+
+    form input:focus,
+    form textarea:focus {
+      border-color: #4f46e5;
+      outline: none;
+    }
+
+    form textarea {
+      resize: vertical;
+      min-height: 150px;
+    }
+
+    .submit-btn {
+      background: #4f46e5;
+      color: white;
+      border: none;
+      padding: 0.9rem 1.5rem;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .submit-btn:hover {
+      background: #4338ca;
+    }
+
+    .info-block {
+      margin-bottom: 1.2rem;
+      display: flex;
+      align-items: flex-start;
+      gap: 12px;
+    }
+
+    .info-block span {
+      font-size: 1.5rem;
+      color: #4f46e5;
+    }
+
+    .info-block a {
+      color: #111827;
+      text-decoration: none;
+      font-size: 1rem;
+    }
+
+    .info-block a:hover {
+      text-decoration: underline;
+    }
+
+    .social-icons {
+      display: flex;
+      gap: 12px;
+      margin-top: 1.5rem;
+    }
+
+    .social-icons a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #4f46e5;
+      color: white;
+      transition: background 0.3s ease;
+    }
+
+    .social-icons a:hover {
+      background: #4338ca;
+    }
+
+    @media (max-width: 768px) {
+      .contact-container {
+        flex-direction: column;
+      }
+      .contact-info-section {
+        border-left: none;
+        border-top: 2px solid #e5e7eb;
+      }
+    }
+  </style>
 </head>
-<body>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<body class="contact-page">
 
-  <section>
-    <h1>Contact Me</h1>
-    <p>If you're interested in personalized academic support, feel free to reach out. I typically respond within 24 hours.</p>
-    <p><strong>Email:</strong> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
-  </section>
+<!-- ✅ Navigation -->
+<nav>
+  <div class="nav-brand">Tutor Brian</div>
+  <button class="menu-toggle" id="menu-toggle">☰</button>
+  <ul class="nav-links" id="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="contact.html" class="active">Contact</a></li>
+    <li><a href="faq.html">FAQ</a></li>
+  </ul>
+  <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
+</nav>
 
-  <footer>
-    <p>&copy; 2025 Tutor Brian | Academic Support</p>
-  </footer>
+<!-- ✅ Contact Section -->
+<main>
+  <div class="contact-container">
+
+    <!-- Contact Form Section -->
+    <div class="contact-form-section">
+      <h2>Send a Message</h2>
+      <form action="#" method="post">
+        <label for="name">Your Name</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="email">Your Email</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit" class="submit-btn">Send Message</button>
+      </form>
+    </div>
+
+    <!-- Contact Info Section -->
+    <div class="contact-info-section">
+      <h2>Contact Info</h2>
+
+      <div class="info-block">
+        <span class="material-icons">email</span>
+        <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a>
+      </div>
+
+      <div class="info-block">
+        <span class="material-icons">phone</span>
+        <a href="tel:+254717357947">+254 717 357 947</a>
+      </div>
+
+      <div class="info-block">
+        <span class="material-icons">chat</span>
+        <a href="https://wa.me/717357947" target="_blank">Chat on WhatsApp</a>
+      </div>
+
+      <div class="social-icons">
+        <a href="#" title="Facebook"><span class="material-icons">facebook</span></a>
+        <a href="#" title="Instagram"><span class="material-icons">photo_camera</span></a>
+        <a href="#" title="LinkedIn"><span class="material-icons">linkedin</span></a>
+        <a href="#" title="Telegram"><span class="material-icons">send</span></a>
+        <a href="#" title="X / Twitter"><span class="material-icons">alternate_email</span></a>
+      </div>
+    </div>
+  </div>
+</main>
+
+<!-- ✅ Footer -->
+<footer style="text-align:center; margin-top:3rem; font-size:0.9rem; color:#888;">
+  &copy; 2025 Tutor Brian | All rights reserved.
+</footer>
+
+<script>
+  const toggle = document.getElementById("menu-toggle");
+  const navLinks = document.getElementById("nav-links");
+  toggle.addEventListener("click", () => {
+    navLinks.classList.toggle("active");
+  });
+
+  function toggleTheme() {
+    const html = document.documentElement;
+    html.dataset.theme = html.dataset.theme === 'light' ? 'dark' : 'light';
+  }
+</script>
 
 </body>
 </html>
