--- a/Contact.html
+++ b/Contact.html
@@ -152,8 +152,8 @@
     <div class="contact-info">
       <h2>Contact Information</h2>
       <p><span class="material-icons">email</span> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
-      <p><span class="material-icons">phone</span> <a href="tel:+12345678900">+1‑234‑567‑8900</a></p>
-      <p><span class="material-icons">chat</span> <a href="https://wa.me/12345678900" target="_blank">Chat on WhatsApp</a></p>
+      <p><span class="material-icons">phone</span> <a href="tel:+254717357947">+254 717 357 947</a></p>
+      <p><span class="material-icons">chat</span> <a href="https://wa.me/717357947" target="_blank">Chat on WhatsApp</a></p>
       <p><span class="material-icons">location_on</span> United States (Remote Services)</p>
       <h2 style="margin-top:2rem;">Social Media</h2>
       <p>
